# merit_tiage_nurse

./: .env.example  .gitignore  README.md  app.py  architecture.excalidraw  generator.py  graph.py  llm.py  main.py  models.py  pyproject.toml  queue_manager.py  schema.py  service.py
.github/: copilot-instructions.md
.github/agents/: pytest-principles-reviewer.agent.md  python-static-analyzer.agent.md  screenshot-bug-reporter.agent.md  test-generator.agent.md
.github/instructions/: python.instructions.md
.github/prompts/: selenium-promp.prompt.md
templates/: index.html
tests/: test_llm.py
