[project]
name = "nba-triage-agent"
version = "0.1.0"
description = "Next-best-action triage agent: messy input stream -> live priority queue."
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "flask>=3.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
